[gd_scene load_steps=3 format=3 uid="uid://ct5gvw2xrwt8l"]

[ext_resource type="Script" uid="uid://cjd4kwgh2ba35" path="res://script/speedometer_hud.gd" id="1_speedometer"]
[ext_resource type="Theme" path="res://assets/main_theme.tres" id="2_theme"]

[node name="SpeedometerHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
theme = ExtResource("2_theme")
script = ExtResource("1_speedometer")

[node name="SpeedometerPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 170.0

[node name="GaugeBackground" type="ColorRect" parent="SpeedometerPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 107.0
offset_bottom = 110.0
scale = Vector2(1.35, 1.35)
color = Color(0.15, 0.15, 0.15, 1)

[node name="OuterCircle" type="Line2D" parent="SpeedometerPanel"]
points = PackedVector2Array(75, 25, 85, 26, 94, 29, 102, 34, 109, 41, 114, 49, 118, 58, 121, 68, 123, 78, 123, 88, 121, 98, 118, 108, 114, 117, 109, 125, 102, 132, 94, 137, 85, 140, 75, 141, 65, 140, 56, 137, 48, 132, 41, 125, 36, 117, 32, 108, 29, 98, 27, 88, 27, 78, 29, 68, 32, 58, 36, 49, 41, 41, 48, 34, 56, 29, 65, 26, 75, 25)
closed = true
width = 2.0
default_color = Color(0.5, 0.5, 0.5, 1)

[node name="MinMark" type="Line2D" parent="SpeedometerPanel"]
points = PackedVector2Array(39.6, 110.4, 45, 105)
width = 2.0

[node name="MidMark" type="Line2D" parent="SpeedometerPanel"]
points = PackedVector2Array(75, 125, 75, 118)
width = 2.0

[node name="MaxMark" type="Line2D" parent="SpeedometerPanel"]
points = PackedVector2Array(110.4, 110.4, 105, 105)
width = 2.0
default_color = Color(1, 1, 0, 1)

[node name="Needle" type="Line2D" parent="SpeedometerPanel"]
points = PackedVector2Array(75, 75, 39.6, 110.4)
width = 3.0
default_color = Color(1, 0.2, 0.2, 1)

[node name="CenterDot" type="ColorRect" parent="SpeedometerPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="SpeedLabel" type="Label" parent="SpeedometerPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnitLabel" type="Label" parent="SpeedometerPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 125.0
offset_right = 100.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "KECEPATAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FurnaceStatus" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 180.0
offset_right = 170.0
offset_bottom = 230.0

[node name="Label" type="Label" parent="FurnaceStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Tungku: Siaga
0 / 0"
horizontal_alignment = 1
vertical_alignment = 1


